# PromptAgentOpt

./: .gitignore  README.md  callbacks.py  config.py  env.py  input_dataset.json  loggers.py  main.py  optimization_config.json  pyproject.toml  run.py  run_optimization.py  todo.md
intelligence_assets/: __init__.py
intelligence_assets/llm/: agent.py  client.py
intelligence_assets/retrieval/: retriever.py
outputs/: __init__.py  analysis_result.py  base.py  final_report.py
prompt_optimizer/: initializer.py  models.py  nodes.py  registry.py  templates.py  utils.py  workflow.py
templates/: analysis_prompts.py  synthesis_prompts.py  template_factory.py
types/: __init__.py  documents.py
workflows/: __init__.py  idea_one_workflow.py  registry.py  run.py
workflows/nodes/: __init__.py  information_retrieval_nodes.py
workflows/subgraphs/: __init__.py  information_retrieval.py
