[project]
name = "promptagentopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.66.0",
    "dotenv>=0.9.9",
    "files-to-prompt>=0.6",
    "google-genai>=1.33.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langfuse>=3.3.2",
    "langgraph>=0.6.6",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.105.0",
    "pandas>=2.0.0,<2.3.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
]
